{{$NEXT}}

- Removed more modules from test prereqs that are only used in optional tests.


0.03     2016-06-17

- Remove Moose from test prereqs. This is only used for an optional test.

- When generating the source for named params checking, sort the parameters so
  that the order in which keys are checked is consistent.

- You can now pass a name parameter when creating a check subroutine. This
  will be used to name the generated subroutine using Sub::Name.


0.02     2016-05-28

- Add support for positional parameters.

- Add support for type checking extra parameters.

- Renamed allow_extra to slurpy.


0.01     2016-05-24

- First release upon an unsuspecting world.